Cleanup: Remove placeholder example classes